--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="/yandex-metrika.js"></script>
+    <script src="/assets/js/yandex-metrika.js"></script>
   </body>
 </html>
